@@ -190,6 +190,7 @@ $1',
 	'maps-googlemaps3-par-gkml' => 'KML files hosted by Google to load onto the map.',
 	'maps-googlemaps3-par-fusiontables' => 'IDs of Google Fusion Tables which should be loaded onto the map.',
 	'maps-googlemaps3-par-tilt' => 'Tilt for the Map when using Google Maps.',
+	'maps-googlemaps3-par-kmlrezoom' => 'Rezoom the map after the KML layers have been loaded.',
 
 	// OpenLayers
 	'maps-openlayers-par-controls' => 'The controls to place on the map.',
